unpackaged/objects/copado__Deployment_Task__c.object
<CustomObject>
	<fields>
		<fullName>copado__Apply_to__c</fullName>
		<label>Apply to</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>All Environments in Pipeline</fullName>
					<default>true</default>
					<label>All Environments in Pipeline</label>
				</value>
				<value>
					<fullName>Specific Environments in Pipeline</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Data_Template__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Data Template</label>
		<referenceTo>copado__Data_Template__c</referenceTo>
		<relationshipLabel>Deployment Tasks</relationshipLabel>
		<relationshipName>Deployment_Tasks</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Disable_Task_for_Back_Promotions__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Disable Task for Back-Promotions</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Notify_Task_Owner__c</fullName>
		<defaultValue>&apos;None&apos;</defaultValue>
		<label>Notify Task Owner</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>copado__Notify_Task_Owner_Values</valueSetName>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Order__c</fullName>
		<defaultValue>1</defaultValue>
		<label>Order</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Perform_Manual_Task__c</fullName>
		<label>Perform Deployment Task</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Before Deployment</fullName>
					<default>true</default>
					<label>Before Deployment</label>
				</value>
				<value>
					<fullName>After Deployment</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Perform_in_Destination_Orgs__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Perform in Destination Credential(s)</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Perform_in_Source_Org__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Perform in Source Credential</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Draft</fullName>
					<default>true</default>
					<label>Draft</label>
				</value>
				<value>
					<fullName>Pending</fullName>
				</value>
				<value>
					<fullName>Completed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Task_Description__c</fullName>
		<label>Task Description</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Type__c</fullName>
		<label>Type</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Manual Task</fullName>
				</value>
				<value>
					<fullName>Data</fullName>
				</value>
				<value>
					<fullName>Bulk Data</fullName>
				</value>
				<value>
					<fullName>Data Template</fullName>
				</value>
				<value>
					<fullName>Delete MetaData</fullName>
				</value>
				<value>
					<fullName>Custom Settings</fullName>
				</value>
				<value>
					<fullName>Apex</fullName>
				</value>
				<value>
					<fullName>URL Callout</fullName>
				</value>
				<value>
					<fullName>Salesforce Flow</fullName>
				</value>
				<value>
					<fullName>Function</fullName>
				</value>
				<value>
					<fullName>Custom Setting</fullName>
					<isActive>false</isActive>
					<label>Custom Setting</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__User_Story__c</fullName>
		<label>User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>Deployment Tasks</relationshipLabel>
		<relationshipName>Deployment_Tasks</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__dataJSON__c</fullName>
		<description>Standard views (New, Edit, View, Clone) for Deployment Task object are overwritten. This field is being used by to controller extension class of the page that overwrites the standards.</description>
		<label>dataJSON</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<label>Deployment Task</label>
	<nameField>
		<label>Deployment Tasks Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Deployment Tasks</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>